# ABAMES

./: LMGServerMain.py  LmgClient.py  Manual_Tr.py  README.md  app.py  csrt_tracker.py  design.ui  detection_auto-stdout.txt  detection_auto.py
CamUtil/: CMakeLists.txt
CamUtil/vCameraStreamer/: CMakeLists.txt  camera-streamer-client.cpp  camera-streamer-server.cpp
server/: Server.py
server/CamUtil/: Server.py  install-deps.sh  run-service.sh  server-stdout.txt  vCamStreamer.service
server/CamUtil/pytests/: CameraStreamerClient.py
server/CamUtil/vCameraStreamer/: camera-streamer-server.cpp
